# market-regime-capstone

./: .gitignore  Capstone_Review_Report.md  README.md  pyproject.toml  requirements.txt
conf/: config.yaml
conf/backtest/: default.yaml
conf/cv/: purged_walk_forward.yaml
conf/data/: btc_hourly.yaml  spy_primary.yaml
conf/model/: dlinear.yaml  patchtst_cross_attn.yaml  patchtst_film.yaml  patchtst_hard_switch.yaml  patchtst_no_regime.yaml  patchtst_pinball.yaml
notebooks/: 01_EDA_stylised_facts.ipynb  02_Model_Results_and_Evaluation.ipynb  Capstone_Suggestions_and_Future_Work.doc  README.md  Research_Improvement_Suggestions.docx
reports/: ablation_table.csv  backtest_metrics.json  eval_summary.json  film_divergence.csv  film_params.csv  final_holdout.json  final_holdout_summary.csv  regime_attribution.csv  sensitivity_costs.csv
scripts/: backtest.py  btc_robustness.py  build_features.py  download_data.py  evaluate.py  final_holdout.py  fit_regimes.py  run_ablation.py  run_baselines.py  sensitivity.py  train.py
src/backtest/: __init__.py  costs.py  engine.py  metrics.py  sizing.py
src/data/: __init__.py  loaders.py  pit.py
src/eval/: __init__.py  ablation.py  bootstrap.py  dsr.py  interpretability.py  regime_attribution.py
src/features/: __init__.py  cv.py  fracdiff.py  scalers.py  targets.py
src/models/: __init__.py  baselines.py  dataset.py  dlinear.py  film.py  hard_switch.py  losses.py  patchtst.py  train_loop.py
src/regimes/: __init__.py  filtering.py  hmm.py  hsmm.py  validate.py
tests/: test_leakage.py  test_unit.py
