[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-regime-capstone"
version = "0.1.0"
description = "Regime-conditioned Transformer forecasting for equity markets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "yfinance>=0.2.40",
  "pandas-datareader>=0.10",
  "hmmlearn>=0.3.2",
  "statsmodels>=0.14",
  "ruptures>=1.1.9",
  "torch>=2.1",
  "pytorch-lightning>=2.1",
  "lightgbm>=4.0",
  "arch>=6.0",
  "vectorbt>=0.26",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "mlflow>=2.9",
  "matplotlib>=3.8",
  "plotly>=5.18",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
